#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.
Tag: V01-00-31
2018-02-27 Mikhail S. Dubrovin
- add protection for parameters of DCMethods, DCRange, DCType

Tag: V01-00-30
2017-12-15 Mikhail S. Dubrovin
- add src/GlobalUtils.calib_dir_for_exp

Tag: V01-00-29
2017-12-07 Mikhail S. Dubrovin
- add support for Epix10ka calibration constants
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py
        src/CalibParsBaseEpix10kaV1.py

Tag: V01-00-28
2017-12-06 Mikhail S. Dubrovin
- src/GlobalUtils.py - add support for epix10ka

2017-12-04 Mikhail S. Dubrovin
- add ex-geometry-image.py to draw detector relative to IP

Tag: V01-00-27
2017-11-27 Mikhail S. Dubrovin
- GlobalUtils add method file_mode(fname), in add_rec_to_log do not chmod 0666.

Tag: V01-00-26
2017-11-21 Mikhail S. Dubrovin
- add app/proc_info

Tag: V01-00-25
2017-11-20 Mikhail S. Dubrovin
- tune proc_control and proc_new_datasets scripts

Tag: V01-00-24
2017-11-14 Mikhail S. Dubrovin
- app/proc_control - fix order of parameters
- app/proc_new_datasets - kill UNKWN batch jobs

2017-11-10 Mikhail S. Dubrovin
- improve run auto processing
  - add SubprocUtils.batch_job_ids, add parameter user to other methods
  - app/proc_new_datasets.proc_exp_runs - kill SSUSP jobs in batch
  - app/proc_control, proc_new_datasets - add parameters dts and srs

Tag: V01-00-23
2017-11-07 Mikhail S. Dubrovin
- resolving conflict with Dan

Tag: V01-00-22
2017-11-07 Mikhail S. Dubrovin
- Improve run proccessing control
  - app/proc_control - add parameter ofprefix to redirect work files
  - src/DCUtils, GlobalUtils - do not print msg about existing directory